# AR7-Campaign-Generator

./: .gitignore  README.md
backend/: Procfile  pyproject.toml
backend/app/: config.py  main.py
backend/app/composition/: fonts.py  slides.py
backend/app/schemas/: brand_dna.py  campaign.py  carousel.py  composition.py  linkedin.py  poster.py  thread.py
backend/app/services/: brand_dna.py  bundle.py  campaign.py  carousel.py  composition.py  gemini_client.py  linkedin.py  poster.py  thread.py
frontend/: README.md  index.html  package-lock.json  package.json  tsconfig.app.json
frontend/src/: App.tsx  index.css
frontend/src/lib/: api.ts
frontend/src/pages/: Canvas.tsx  Landing.tsx
frontend/src/types/: api.ts
